--- a/docs/一些案例.md
+++ b/docs/一些案例.md
@@ -10,6 +10,7 @@
 | MyBatis-Plus          | https://baomidou.com/                                        | https://github.com/baomidou/mybatis-plus-doc                 |
 | MyBatisCodeHelper-Pro | https://gejun123456.github.io/MyBatisCodeHelper-Pro/#/       | https://github.com/gejun123456/MyBatisCodeHelper-Pro/tree/master/docs |
 | Spring Data JPA       | https://docs.spring.io/spring-data/jpa/reference/jpa/getting-started.html | https://github.com/spring-projects/spring-data-jpa/blob/3.2.4/src/main/antora/modules/ROOT/pages/jpa/getting-started.adoc |
+| 春松客服              | https://readthe.gitee.io/cskefu-docs/docs/                   | https://gitee.com/cskefu/docs/tree/main/versioned_docs/version-v8 |
 
 
 
